--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,3 @@
-absl-py==0.9.0
-astunparse==1.6.3
-cachetools==4.1.0
-certifi==2020.6.20
-chardet==3.0.4
-cycler==0.10.0
-gast==0.3.3
-google-auth==1.18.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.30.0
-h5py==2.10.0
-idna==2.9
-importlib-metadata==1.6.1
-joblib==0.15.1
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-Markdown==3.2.2
-matplotlib==3.2.2
-numpy==1.19.0
-oauthlib==3.1.0
-opt-einsum==3.2.1
-protobuf==3.12.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.7
-scikit-learn==0.23.1
-scipy==1.4.1
-six==1.15.0
-sklearn==0.0
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.5.1
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-urllib3==1.26.5
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.1.0
+matplotlib
+sklearn
+tensorflow
